# adda_ros_multiple_cars

./: startup.sh  startup_dtw.sh  startup_recording.sh
00_Thesis/: IAS.sh  IAS.sty  thesis.acn  thesis.aux  thesis.bbl  thesis.blg  thesis.lof  thesis.lot  thesis.opo  thesis.out  thesis.syo  thesis.tex  thesis.toc  thesis.xdy
01_OLD/susi_test/: CMakeLists.txt  package.xml
01_OLD/susi_test/launch/: susi_test.launch
01_OLD/susi_test/scripts/: susi_test.py
Real data/: instruction
another_test/: CMakeLists.txt  package.xml
belief_obs/: CMakeLists.txt  package.xml
car_teleop/: CMakeLists.txt  package.xml
collision_avoidance_with_pomdp_code-master/: README.md
collision_avoidance_with_pomdp_code-master/despot/examples/cpp_models/car/: CMakeLists.txt  Makefile  package.xml
collision_avoidance_with_pomdp_code-master/despot/examples/cpp_models/car/config/: config.ini
collision_avoidance_with_pomdp_code-master/despot/examples/cpp_models/car/include/: Car.h
collision_avoidance_with_pomdp_code-master/despot/examples/cpp_models/car/include/pomdp_model/: CarBelief.h  CarParticleLowerBound.h  CarPolicy.h  CarScenarioUpperBound.h  CarState.h  Observation.h
collision_avoidance_with_pomdp_code-master/despot/examples/cpp_models/car/include/traffic_models/: CarTransitionModel.h  PedestrianTransitionModel.h  transition_model.h
collision_avoidance_with_pomdp_code-master/despot/examples/cpp_models/car/include/util/: Printer.h  eigenmvn.h  helper_functions.h  ros_utilities.h
collision_avoidance_with_pomdp_code-master/despot/examples/cpp_models/car/src/: Car.cpp  main.cpp
collision_avoidance_with_pomdp_code-master/despot/examples/cpp_models/car/src/pomdp_model/: CarBelief.cpp  CarParticleLowerBound.cpp  CarPolicy.cpp  CarScenarioUpperBound.cpp  CarState.cpp  Observation.cpp
collision_avoidance_with_pomdp_code-master/despot/examples/cpp_models/car/src/traffic_models/: CarTransitionModel.cpp  PedestrianTransitionModel.cpp
collision_avoidance_with_pomdp_code-master/despot/examples/cpp_models/car/src/util/: FileWriter.hpp  Printer.cpp
lina_test/: package.xml
listener/: CMakeLists.txt  package.xml
means_viz/: CMakeLists.txt  package.xml
means_viz/scripts/: means_viz.py
movement_prediction/: Map_Recognition_1.py  Map_Recognition_2.py  Map_Recognition_2_for pictues.py  RBF.py  RBF_Code from Doro.py  RBF_full.py  RBF_full_NEW.py  RBF_full_NEW_backup.py  RBF_realData.py  belief_computation.py  belief_evolution_comparison.py  dtw.py  functions.py  learn_trajectories.py  main.py  main2.py  main_forRealData.py  main_old.py  main_see how trajectory looks like.py  net_belief_evolution.py  real_data_plot.py  requirements.txt  scaling.py  scaling2.py  test.py  test_0.py  test_1.py  test_final.py  trajectory_interpolation_plot.py
policy_gui/: CMakeLists.txt  package.xml  (+2 more)
simple_sim_car/pomdp_car_description/: CMakeLists.txt  package.xml
simple_sim_car/pomdp_car_description/config/: rviz_car.rviz  test_car.rviz
simple_sim_car/pomdp_car_description/launch/: pomdp_car_rviz.launch
simple_sim_car/pomdp_car_description/robots/: pomdp_car.urdf.xacro
(+772 files in other folders)
